2005-05-20 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Move private methods into implementation.
	* replace "Enum" with "Enumerator".

2005-05-19 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Source/Search/TestSort.m: ported.
	* Current test result: 
	Result: 39 classes, 101 methods, 352123 tests, 0 failed

2005-05-17 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Source/Search/TestQueryTermVector.m: ported.

2005-05-17 Quentin Mathe <qmathe@club-internet.fr>

	* Headers/Search/LCHits.h (-initWithSearcher:query:filter:sort:): Renamed 
	'sort' parameter from 's' to 'o' because the first parameter was already named
	's' and this issue prevented LuceneKit to compile.

2005-05-16 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Remove LuceneKit/ after clean.
	* Source/Search/TestCheckHits.h:
	* Source/Search/TestCheckHits.m:
	* Source/Search/TestBoolean2.m: ported.
	* Install headers of Search
	* Current test result: 
	Result: 37 classes, 94 methods, 352065 tests, 0 failed

2005-05-15 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Rewrite GNUmakefile and some headers to make correct installation.
	* Adapt new directory structure.
	* Source/Search/TestNot.m:
	* Source/Search/TestBooleanScorer.m: 
	* Source/Search/TestBooleanOr.m: ported.
	* Current test result: 
	Result: 36 classes, 84 methods, 352033 tests, 0 failed

2005-05-14 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Source/Search/TestTermVectors.m: 
	* Source/Search/TestEnglish.h:
	* Source/Search/TestEnglish.m: ported.
	* Current test result: 
	  Result: 33 classes, 77 methods, 352023 tests, 0 failed

2005-05-13 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Source/Search/TestBooleanQuery.m: ported.
	* Source/Search/TestDocBoost.m: ported.

2005-05-11 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Source/Search/TestSetNorm.m: ported.

2005-05-09 Yen-Ju Chen <yjchenx at gmail _dot_ com>

	* Test units work again.
	* Current test result: 
	Result: 28 classes, 68 methods, 351511 tests, 0 failed
	* Re-ident source code.